--- a/css/extra.css
+++ b/css/extra.css
@@ -19,6 +19,13 @@ section[data-background] h3 {
        border-radius: 15px
 }
 
+section[data-background] h4 { 
+       background-color:rgba(200,200,200,0.7);
+       padding: 10px;
+       margin: 5px;
+       border-radius: 4px
+}
+
 .pink { 
        background-color:rgba(255, 0, 102,0.7);
        padding: 30px;
